Remove errors connected with the same title layers
Signed-off-by: belozerovany <belozerovany@gmail.com>

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</div>			
 		</div>	
 	</header>
-	<section class="banner">
+	<section class="info">
 		<div class="info-banner">
 			<h3>Разработаем продающий вебсайт</h3>
 			<p>поднимем Ваш бизнес на новые высоты</p>
